--- a/petsitter.0.0.oas.yml
+++ b/petsitter.0.0.oas.yml
@@ -2,10 +2,18 @@ openapi: 3.0.3
 info:
   title: PetSitter API
   version: "0.1"
+tags:
+  - name: Users
+    description: User-related operations
+  - name: Jobs
+    description: Job-related operations
 paths:
   /users:
     post:
+      tags:
+      - Users
       summary: Register User
+      operationId: registerUser
       responses:
         '201':
           description: Created
@@ -26,7 +34,10 @@ paths:
         in: path
         required: true
     get:
+      tags:
+      - Users
       summary: View User
+      operationId: viewUserWithId
       responses:
         '200':
           description: OK
@@ -35,7 +46,10 @@ paths:
               schema:
                 $ref: '#/components/schemas/User'
     put:
+      tags:
+      - Users
       summary: Modify User
+      operationId: modifyUserWithId
       responses:
         '200':
           description: OK
@@ -49,13 +63,19 @@ paths:
             schema:
               $ref: '#/components/schemas/User'
     delete:
+      tags:
+      - Users
       summary: Delete User
+      operationId: deleteUserWithId
       responses:
         '204':
           description: No Content
   /jobs:
     post:
+      tags:
+      - Jobs
       summary: Create Job
+      operationId: createJob
       responses:
         '201':
           description: Created
@@ -69,7 +89,10 @@ paths:
             schema:
               $ref: '#/components/schemas/Job'
     get:
+      tags:
+      - Jobs
       summary: List All Jobs
+      operationId: listAllJobs
       responses:
         '200':
           description: OK
@@ -82,42 +105,6 @@ paths:
                     type: array
                     items:
                       $ref: '#/components/schemas/Job'
-              examples:
-                with-some-data:
-                  summary: With some data
-                  value:
-                    items:
-                    - id: 123
-                      creator_user_id: 345
-                      start_time: 2020-06-01T00:00:00Z
-                      end_time: 2020-06-02T00:00:00Z
-                      dog:
-                        name: Fido
-                        age: 3
-                        breed: Doberman
-                        size: medium
-                      activity: walk
-                    - id: 234
-                      creator_user_id: 345
-                      start_time: 2020-06-01T00:00:00Z
-                      end_time: 2020-06-03T00:00:00Z
-                      dog:
-                        name: Jesse
-                        age: 2
-                        breed: Rottweiler
-                        size: large
-                      activity: sit
-                    - id: 234
-                      creator_user_id: 345
-                      start_time: 2020-06-01T00:00:00Z
-                      end_time: 2020-06-02T00:00:00Z
-                      dog:
-                        name: Blossom
-                        age: 2
-                        breed: Rottweiler
-                        size: large
-                      activity: walk
-
   /jobs/{id}:
     parameters:
       - schema:
@@ -126,7 +113,10 @@ paths:
         in: path
         required: true
     get:
+      tags:
+      - Jobs
       summary: View Job
+      operationId: viewJobWithId
       responses:
         '200':
           description: OK
@@ -135,7 +125,10 @@ paths:
               schema:
                 $ref: '#/components/schemas/Job'
     put:
+      tags:
+      - Jobs
       summary: Modify Job
+      operationId: modifyJobWithId
       responses:
         '200':
           description: OK
@@ -147,7 +140,15 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/Job'    
+              $ref: '#/components/schemas/Job'
+    delete:
+      tags:
+      - Jobs
+      summary: Delete Job
+      operationId: deleteJobWithId
+      responses:
+        '204':
+          description: No Content
   /jobs/{id}/job-applications:
     parameters:
       - schema:
@@ -156,7 +157,10 @@ paths:
         in: path
         required: true
     get:
+      tags:
+      - Jobs
       summary: List Applications For Job
+      operationId: viewApplicationsForJob
       responses:
         '200':
           description: OK
@@ -170,7 +174,10 @@ paths:
                     items:
                       $ref: '#/components/schemas/JobApplication'
     post:
+      tags:
+      - Jobs
       summary: Create Job Application
+      operationId: createJobApplication
       responses:
         '201':
           description: Created
@@ -191,7 +198,10 @@ paths:
         in: path
         required: true
     get:
+      tags:
+      - Users
       summary: List Jobs For User
+      operationId: listJobsForUser
       responses:
         '200':
           description: OK
@@ -204,70 +214,6 @@ paths:
                     type: array
                     items:
                       $ref: '#/components/schemas/Job'
-  /users/{id}/job-applications:
-    parameters:
-      - schema:
-         type: integer
-        name: id
-        in: path
-        required: true
-    get:
-      summary: List of Job Applications for a Logged-in User
-      responses:
-        '200':
-          description: OK
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  items:
-                    type: array
-                    items:
-                      $ref: "#/components/schemas/JobApplication"
-              examples:
-                two-items:
-                  summary: Two Job Applications
-                  value:
-                    items:
-                    - id: 123
-                      user_id: 123
-                      job_id: 123
-                      status: PENDING
-                    - id: 123
-                      user_id: 123
-                      job_id: 123
-                      status: COMPLETE
-                empty:
-                  summary: Zero Job Applications
-                  value:
-                    items: []
-                many:
-                  summary: Many Job Applications
-                  value:
-                    items:
-                    - id: 0
-                      user_id: 358
-                      jod_id: 4012
-                      status: COMPLETE
-                    - id: 1
-                      user_id: 3089
-                      job_id: 3902
-                      status: PENDING
-                    - id: 2
-                      user_id: 4040
-                      job_id: 5269
-                      status: PENDING
-                    - id: 3
-                      user_id: 5636
-                      job_id: 8420
-                      status: PENDING
-                # properties:
-                #   items:
-                #     type: array
-                #     items:
-                #       $ref: '#/components/schemas/JobApplication'
-                      
   /job-applications/{id}:
     parameters:
       - schema:
@@ -276,14 +222,16 @@ paths:
         in: path
         required: true
     put:
+      tags:
+      - Jobs
       summary: Modify Job Application
+      operationId: modifyJobApplicationWithId
       requestBody:
         description: Update the application details
         content:
           application/json:
             schema:
               $ref: '#/components/schemas/JobApplication'
-      
       responses:
         '200':
           description: OK
@@ -291,7 +239,6 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/JobApplication'
-   
 components:
   schemas:
     User:
